0.36.4 - fixed mdbsql detection
	fixed const error in mdbtools connection
	added const to *connection::identify()/pingQuery() methods

0.36.3 - added allowShortReads option to non-readline sqlrsh build
	fixes to php pear db driver for autoExecute
	sqlrsh uses libreadline even on systems that don't have libhistory now
	changed test -n -r "${sysconfdir}/sqlrelay.conf" to 
		test ! -r "${sysconfdir}/sqlrelay.conf" in init scripts

0.36.2 - added -lnnz10 to instantclient configuration

0.36.1 - added support for oracle instantclient
	added python 2.4 to spec file

0.36 - configure script defaults db2 version to 8
	configure script detects various odbc function paramters, uses them to
		build odbc connection
	applied Matthias Klose's freetds patchlevel patch
	added Py_BEGIN_ALLOW_THREADS/Py_END_ALLOW_THREADS in various places
		in CSQLRelay.C
	fixed freetds version check even more
	INSTALL is moved to INSTALL.txt for OS X now
	applied Matthias Klose's Zope configure patch
	added mdbtools connection
	fixed double-free of debug file name
	sqlrsh exits after running a script now
	ctrl-D doesn't crash sqlrsh now
	connections=0 is valid now, will start no connections
		and dynamically scale from there
	upped MAXQUERYLENGTH to 65536
	removed MAXQUERYLENGTH from sqlrdefines.h
	fixed bug where query length > MAXQUERYLENGTH could cause segfault when
		copying references
	sqlr-listener and sqlr-scaler refuse to start now if
		runasuser/runasgroup can't read the config file
	sqlr-scaler shouldn't loop up if sqlr-listener is killed now
	fixed bug where scaler's group might not be set properly
	processes don't try to set their user/group unless they're different
		from the user/group that the process is currently running as,
		should prevent "cannot switch group to nobody" messages
	per Matthias Klose's bug reports:
		set manpage section to 8 for sqlr-ipclean, sqlr-start, sqlr-stop
		fixed MDBTOOLS detection to handle includes/libs installed in
			/usr/include, /usr/lib